<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
        
        <Button
    	    android:id="@+id/button1a"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="left"
    	    android:text="@string/button1a_text" />
        
        <Button
    	    android:id="@+id/button1b"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/button1b_text" />
        
        <Button
    	    android:id="@+id/button1c"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="right"
    	    android:text="@string/button1c_text" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <Button
    	    android:id="@+id/button2a"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="top"
    	    android:text="@string/button2a_text" />
        
        <Button
    	    android:id="@+id/button2b"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/button2b_text" />
        
        <Button
    	    android:id="@+id/button2c"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="bottom"
    	    android:text="@string/button2c_text" />
        
    </LinearLayout>
        
</LinearLayout>
